--- a/image_classification/image-classification.ipynb
+++ b/image_classification/image-classification.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "853a68de",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "id": "29a74244",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "id": "1a268974",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "id": "894cf1c1",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "9413d639",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "id": "567b9bfa",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "id": "a052d44d",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "id": "dc77d01e",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 15,
    "id": "5374f4d1",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 16,
    "id": "427186cd",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 17,
    "id": "d658bc7e",
    "metadata": {},
    "outputs": [
@@ -390,56 +390,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, Loss: 2.8652151823043823, Accuracy: 0.10891088843345642\n",
-      "Epoch: 1, Loss: 2.105020046234131, Accuracy: 0.1782178282737732\n",
-      "Epoch: 2, Loss: 1.6250371932983398, Accuracy: 0.3465346395969391\n",
-      "Epoch: 3, Loss: 1.2851938009262085, Accuracy: 0.5742574334144592\n",
-      "Epoch: 4, Loss: 1.0332130193710327, Accuracy: 0.6732673048973083\n",
-      "Epoch: 5, Loss: 0.8370908200740814, Accuracy: 0.6930692791938782\n",
-      "Epoch: 6, Loss: 0.7628727853298187, Accuracy: 0.7029703259468079\n",
-      "Epoch: 7, Loss: 0.5791459679603577, Accuracy: 0.7425742745399475\n",
-      "Epoch: 8, Loss: 0.4744180589914322, Accuracy: 0.7722772359848022\n",
-      "Epoch: 9, Loss: 0.37492232024669647, Accuracy: 0.8118811845779419\n",
-      "Epoch: 10, Loss: 0.31579071283340454, Accuracy: 0.8316831588745117\n",
-      "Epoch: 11, Loss: 0.30646124482154846, Accuracy: 0.8514851331710815\n",
-      "Epoch: 12, Loss: 0.27616460621356964, Accuracy: 0.8514851331710815\n",
-      "Epoch: 13, Loss: 0.22948893159627914, Accuracy: 0.8811880946159363\n",
-      "Epoch: 14, Loss: 0.2030021846294403, Accuracy: 0.8811880946159363\n",
-      "Epoch: 15, Loss: 0.18847127258777618, Accuracy: 0.8613861203193665\n",
-      "Epoch: 16, Loss: 0.15454800426959991, Accuracy: 0.8910890817642212\n",
-      "Epoch: 17, Loss: 0.1326867640018463, Accuracy: 0.8613861203193665\n",
-      "Epoch: 18, Loss: 0.11490536108613014, Accuracy: 0.8910890817642212\n",
-      "Epoch: 19, Loss: 0.10735141858458519, Accuracy: 0.8910890817642212\n",
-      "Epoch: 20, Loss: 0.0853869840502739, Accuracy: 0.8712871074676514\n",
-      "Epoch: 21, Loss: 0.08791617676615715, Accuracy: 0.8811880946159363\n",
-      "Epoch: 22, Loss: 0.0640929825603962, Accuracy: 0.8910890817642212\n",
-      "Epoch: 23, Loss: 0.05565491132438183, Accuracy: 0.9108911156654358\n",
-      "Epoch: 24, Loss: 0.0748913399875164, Accuracy: 0.9207921028137207\n",
-      "Epoch: 25, Loss: 0.060067759826779366, Accuracy: 0.9504950642585754\n",
-      "Epoch: 26, Loss: 0.05590702034533024, Accuracy: 0.9702970385551453\n",
-      "Epoch: 27, Loss: 0.030681855045259, Accuracy: 0.9900990128517151\n",
-      "Epoch: 28, Loss: 0.041269704699516296, Accuracy: 0.9603960514068604\n",
-      "Epoch: 29, Loss: 0.029289613477885723, Accuracy: 0.9801980257034302\n",
-      "Epoch: 30, Loss: 0.041799839586019516, Accuracy: 0.9702970385551453\n",
-      "Epoch: 31, Loss: 0.031863161362707615, Accuracy: 0.9900990128517151\n",
-      "Epoch: 32, Loss: 0.05128083378076553, Accuracy: 0.9900990128517151\n",
-      "Epoch: 33, Loss: 0.02822069451212883, Accuracy: 0.9900990128517151\n",
-      "Epoch: 34, Loss: 0.038664656691253185, Accuracy: 0.9801980257034302\n",
-      "Epoch: 35, Loss: 0.027231529355049133, Accuracy: 0.9801980257034302\n",
-      "Epoch: 36, Loss: 0.024220109917223454, Accuracy: 0.9900990128517151\n",
-      "Epoch: 37, Loss: 0.030687124468386173, Accuracy: 0.9702970385551453\n",
-      "Epoch: 38, Loss: 0.04053386114537716, Accuracy: 1.0\n",
-      "Epoch: 39, Loss: 0.032911159098148346, Accuracy: 0.9900990128517151\n",
-      "Epoch: 40, Loss: 0.019657572265714407, Accuracy: 0.9702970385551453\n",
-      "Epoch: 41, Loss: 0.01934821903705597, Accuracy: 0.9900990128517151\n",
-      "Epoch: 42, Loss: 0.019015786238014698, Accuracy: 1.0\n",
-      "Epoch: 43, Loss: 0.029721468687057495, Accuracy: 1.0\n",
-      "Epoch: 44, Loss: 0.020836147479712963, Accuracy: 0.9801980257034302\n",
-      "Epoch: 45, Loss: 0.015496330335736275, Accuracy: 1.0\n",
-      "Epoch: 46, Loss: 0.01625149603933096, Accuracy: 0.9900990128517151\n",
-      "Epoch: 47, Loss: 0.013370060361921787, Accuracy: 1.0\n",
-      "Epoch: 48, Loss: 0.027694490738213062, Accuracy: 1.0\n",
-      "Epoch: 49, Loss: 0.01952454447746277, Accuracy: 0.9900990128517151\n"
+      "Epoch: 0, Loss: 2.9523305892944336, Accuracy: 0.039603959769010544\n",
+      "Epoch: 1, Loss: 2.1580609679222107, Accuracy: 0.09900990128517151\n",
+      "Epoch: 2, Loss: 1.7234523296356201, Accuracy: 0.11881188303232193\n",
+      "Epoch: 3, Loss: 1.4459583163261414, Accuracy: 0.09900990128517151\n",
+      "Epoch: 4, Loss: 1.1792597770690918, Accuracy: 0.09900990128517151\n",
+      "Epoch: 5, Loss: 1.0265703201293945, Accuracy: 0.0891089141368866\n",
+      "Epoch: 6, Loss: 0.8062362670898438, Accuracy: 0.07920791953802109\n",
+      "Epoch: 7, Loss: 0.6051319539546967, Accuracy: 0.06930693238973618\n",
+      "Epoch: 8, Loss: 0.49508416652679443, Accuracy: 0.059405941516160965\n",
+      "Epoch: 9, Loss: 0.41015729308128357, Accuracy: 0.049504950642585754\n",
+      "Epoch: 10, Loss: 0.4035048186779022, Accuracy: 0.049504950642585754\n",
+      "Epoch: 11, Loss: 0.3299250453710556, Accuracy: 0.059405941516160965\n",
+      "Epoch: 12, Loss: 0.2928563207387924, Accuracy: 0.06930693238973618\n",
+      "Epoch: 13, Loss: 0.2269936129450798, Accuracy: 0.0891089141368866\n",
+      "Epoch: 14, Loss: 0.20112072676420212, Accuracy: 0.15841583907604218\n",
+      "Epoch: 15, Loss: 0.17118797451257706, Accuracy: 0.32673266530036926\n",
+      "Epoch: 16, Loss: 0.1665259674191475, Accuracy: 0.4455445408821106\n",
+      "Epoch: 17, Loss: 0.15777936577796936, Accuracy: 0.5049505233764648\n",
+      "Epoch: 18, Loss: 0.12840543687343597, Accuracy: 0.6237623691558838\n",
+      "Epoch: 19, Loss: 0.11922665685415268, Accuracy: 0.6237623691558838\n",
+      "Epoch: 20, Loss: 0.12140524387359619, Accuracy: 0.7524752616882324\n",
+      "Epoch: 21, Loss: 0.08698918297886848, Accuracy: 0.7326732873916626\n",
+      "Epoch: 22, Loss: 0.07325628399848938, Accuracy: 0.7623762488365173\n",
+      "Epoch: 23, Loss: 0.10423864424228668, Accuracy: 0.8712871074676514\n",
+      "Epoch: 24, Loss: 0.08455963060259819, Accuracy: 0.8613861203193665\n",
+      "Epoch: 25, Loss: 0.09896451607346535, Accuracy: 0.8811880946159363\n",
+      "Epoch: 26, Loss: 0.05165911465883255, Accuracy: 0.8712871074676514\n",
+      "Epoch: 27, Loss: 0.06694243848323822, Accuracy: 0.8910890817642212\n",
+      "Epoch: 28, Loss: 0.062796201556921, Accuracy: 0.8811880946159363\n",
+      "Epoch: 29, Loss: 0.053533632308244705, Accuracy: 0.9009901285171509\n",
+      "Epoch: 30, Loss: 0.03323274850845337, Accuracy: 0.9306930899620056\n",
+      "Epoch: 31, Loss: 0.053213661536574364, Accuracy: 0.9702970385551453\n",
+      "Epoch: 32, Loss: 0.04521629028022289, Accuracy: 0.9405940771102905\n",
+      "Epoch: 33, Loss: 0.04377142712473869, Accuracy: 0.9702970385551453\n",
+      "Epoch: 34, Loss: 0.0346765648573637, Accuracy: 0.9603960514068604\n",
+      "Epoch: 35, Loss: 0.031032197177410126, Accuracy: 0.9603960514068604\n",
+      "Epoch: 36, Loss: 0.038748724386096, Accuracy: 0.9702970385551453\n",
+      "Epoch: 37, Loss: 0.03414434753358364, Accuracy: 0.9702970385551453\n",
+      "Epoch: 38, Loss: 0.03286408446729183, Accuracy: 0.9702970385551453\n",
+      "Epoch: 39, Loss: 0.030722263269126415, Accuracy: 0.9603960514068604\n",
+      "Epoch: 40, Loss: 0.030873113311827183, Accuracy: 0.9603960514068604\n",
+      "Epoch: 41, Loss: 0.033903563395142555, Accuracy: 0.9702970385551453\n",
+      "Epoch: 42, Loss: 0.026072249747812748, Accuracy: 0.9801980257034302\n",
+      "Epoch: 43, Loss: 0.018162278458476067, Accuracy: 0.9801980257034302\n",
+      "Epoch: 44, Loss: 0.017940085846930742, Accuracy: 0.9702970385551453\n",
+      "Epoch: 45, Loss: 0.03541349619626999, Accuracy: 0.9702970385551453\n",
+      "Epoch: 46, Loss: 0.02037830464541912, Accuracy: 0.9900990128517151\n",
+      "Epoch: 47, Loss: 0.027225611731410027, Accuracy: 0.9900990128517151\n",
+      "Epoch: 48, Loss: 0.011443875264376402, Accuracy: 0.9801980257034302\n",
+      "Epoch: 49, Loss: 0.01908771973103285, Accuracy: 0.9801980257034302\n"
      ]
     },
     {
@@ -460,59 +460,59 @@
        "   (11): Dropout(p=0.3, inplace=False)\n",
        "   (12): Linear(in_features=70, out_features=21, bias=True)\n",
        " ),\n",
-       " [2.8652151823043823,\n",
-       "  2.105020046234131,\n",
-       "  1.6250371932983398,\n",
-       "  1.2851938009262085,\n",
-       "  1.0332130193710327,\n",
-       "  0.8370908200740814,\n",
-       "  0.7628727853298187,\n",
-       "  0.5791459679603577,\n",
-       "  0.4744180589914322,\n",
-       "  0.37492232024669647,\n",
-       "  0.31579071283340454,\n",
-       "  0.30646124482154846,\n",
-       "  0.27616460621356964,\n",
-       "  0.22948893159627914,\n",
-       "  0.2030021846294403,\n",
-       "  0.18847127258777618,\n",
-       "  0.15454800426959991,\n",
-       "  0.1326867640018463,\n",
-       "  0.11490536108613014,\n",
-       "  0.10735141858458519,\n",
-       "  0.0853869840502739,\n",
-       "  0.08791617676615715,\n",
-       "  0.0640929825603962,\n",
-       "  0.05565491132438183,\n",
-       "  0.0748913399875164,\n",
-       "  0.060067759826779366,\n",
-       "  0.05590702034533024,\n",
-       "  0.030681855045259,\n",
-       "  0.041269704699516296,\n",
-       "  0.029289613477885723,\n",
-       "  0.041799839586019516,\n",
-       "  0.031863161362707615,\n",
-       "  0.05128083378076553,\n",
-       "  0.02822069451212883,\n",
-       "  0.038664656691253185,\n",
-       "  0.027231529355049133,\n",
-       "  0.024220109917223454,\n",
-       "  0.030687124468386173,\n",
-       "  0.04053386114537716,\n",
-       "  0.032911159098148346,\n",
-       "  0.019657572265714407,\n",
-       "  0.01934821903705597,\n",
-       "  0.019015786238014698,\n",
-       "  0.029721468687057495,\n",
-       "  0.020836147479712963,\n",
-       "  0.015496330335736275,\n",
-       "  0.01625149603933096,\n",
-       "  0.013370060361921787,\n",
-       "  0.027694490738213062,\n",
-       "  0.01952454447746277])"
+       " [2.9523305892944336,\n",
+       "  2.1580609679222107,\n",
+       "  1.7234523296356201,\n",
+       "  1.4459583163261414,\n",
+       "  1.1792597770690918,\n",
+       "  1.0265703201293945,\n",
+       "  0.8062362670898438,\n",
+       "  0.6051319539546967,\n",
+       "  0.49508416652679443,\n",
+       "  0.41015729308128357,\n",
+       "  0.4035048186779022,\n",
+       "  0.3299250453710556,\n",
+       "  0.2928563207387924,\n",
+       "  0.2269936129450798,\n",
+       "  0.20112072676420212,\n",
+       "  0.17118797451257706,\n",
+       "  0.1665259674191475,\n",
+       "  0.15777936577796936,\n",
+       "  0.12840543687343597,\n",
+       "  0.11922665685415268,\n",
+       "  0.12140524387359619,\n",
+       "  0.08698918297886848,\n",
+       "  0.07325628399848938,\n",
+       "  0.10423864424228668,\n",
+       "  0.08455963060259819,\n",
+       "  0.09896451607346535,\n",
+       "  0.05165911465883255,\n",
+       "  0.06694243848323822,\n",
+       "  0.062796201556921,\n",
+       "  0.053533632308244705,\n",
+       "  0.03323274850845337,\n",
+       "  0.053213661536574364,\n",
+       "  0.04521629028022289,\n",
+       "  0.04377142712473869,\n",
+       "  0.0346765648573637,\n",
+       "  0.031032197177410126,\n",
+       "  0.038748724386096,\n",
+       "  0.03414434753358364,\n",
+       "  0.03286408446729183,\n",
+       "  0.030722263269126415,\n",
+       "  0.030873113311827183,\n",
+       "  0.033903563395142555,\n",
+       "  0.026072249747812748,\n",
+       "  0.018162278458476067,\n",
+       "  0.017940085846930742,\n",
+       "  0.03541349619626999,\n",
+       "  0.02037830464541912,\n",
+       "  0.027225611731410027,\n",
+       "  0.011443875264376402,\n",
+       "  0.01908771973103285])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,17 +524,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 19,
    "id": "cee52500",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"image-classification-stratified-80-20\")"
+    "torch.save(model.state_dict(), \"image_models/image-classification-stratified-80-20\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 20,
    "id": "bae4ab9f",
    "metadata": {},
    "outputs": [
@@ -542,51 +542,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WRONG LABEL, expected: 2, got: 17\n",
-      "Total count: 4, label: 0, Accuracy: 1.0\n",
+      "WRONG LABEL, expected: 6, got: 2\n",
+      "WRONG LABEL, expected: 19, got: 10\n",
+      "WRONG LABEL, expected: 16, got: 2\n",
+      "Total count: 5, label: 0, Accuracy: 1.0\n",
       "Total count: 4, label: 1, Accuracy: 1.0\n",
-      "Total count: 5, label: 2, Accuracy: 0.8\n",
+      "Total count: 5, label: 2, Accuracy: 1.0\n",
       "Total count: 5, label: 3, Accuracy: 1.0\n",
       "Total count: 5, label: 4, Accuracy: 1.0\n",
       "Total count: 5, label: 5, Accuracy: 1.0\n",
-      "Total count: 5, label: 6, Accuracy: 1.0\n",
+      "Total count: 5, label: 6, Accuracy: 0.8\n",
       "Total count: 5, label: 7, Accuracy: 1.0\n",
       "Total count: 6, label: 8, Accuracy: 1.0\n",
-      "Total count: 5, label: 9, Accuracy: 1.0\n",
+      "Total count: 4, label: 9, Accuracy: 1.0\n",
       "Total count: 5, label: 10, Accuracy: 1.0\n",
       "Total count: 4, label: 11, Accuracy: 1.0\n",
       "Total count: 4, label: 12, Accuracy: 1.0\n",
       "Total count: 5, label: 13, Accuracy: 1.0\n",
       "Total count: 5, label: 14, Accuracy: 1.0\n",
       "Total count: 5, label: 15, Accuracy: 1.0\n",
-      "Total count: 4, label: 16, Accuracy: 1.0\n",
+      "Total count: 4, label: 16, Accuracy: 0.75\n",
       "Total count: 5, label: 17, Accuracy: 1.0\n",
       "Total count: 4, label: 18, Accuracy: 1.0\n",
-      "Total count: 5, label: 19, Accuracy: 1.0\n",
+      "Total count: 5, label: 19, Accuracy: 0.8\n",
       "Total count: 6, label: 20, Accuracy: 1.0\n",
-      "WRONG LABEL, expected: 2, got: 8\n",
-      "Total count: 4, label: 0, Accuracy: 1.0\n",
-      "Total count: 4, label: 1, Accuracy: 1.0\n",
-      "Total count: 5, label: 2, Accuracy: 0.8\n",
-      "Total count: 5, label: 3, Accuracy: 1.0\n",
-      "Total count: 5, label: 4, Accuracy: 1.0\n",
-      "Total count: 5, label: 5, Accuracy: 1.0\n",
-      "Total count: 5, label: 6, Accuracy: 1.0\n",
-      "Total count: 5, label: 7, Accuracy: 1.0\n",
-      "Total count: 6, label: 8, Accuracy: 1.0\n",
-      "Total count: 5, label: 9, Accuracy: 1.0\n",
-      "Total count: 5, label: 10, Accuracy: 1.0\n",
-      "Total count: 4, label: 11, Accuracy: 1.0\n",
-      "Total count: 4, label: 12, Accuracy: 1.0\n",
-      "Total count: 5, label: 13, Accuracy: 1.0\n",
-      "Total count: 5, label: 14, Accuracy: 1.0\n",
-      "Total count: 5, label: 15, Accuracy: 1.0\n",
-      "Total count: 4, label: 16, Accuracy: 1.0\n",
-      "Total count: 5, label: 17, Accuracy: 1.0\n",
-      "Total count: 4, label: 18, Accuracy: 1.0\n",
-      "Total count: 5, label: 19, Accuracy: 1.0\n",
-      "Total count: 6, label: 20, Accuracy: 1.0\n",
-      "Total count: 4, label: 0, Accuracy: 1.0\n",
+      "WRONG LABEL, expected: 19, got: 10\n",
+      "WRONG LABEL, expected: 16, got: 6\n",
+      "WRONG LABEL, expected: 20, got: 8\n",
+      "Total count: 5, label: 0, Accuracy: 1.0\n",
       "Total count: 4, label: 1, Accuracy: 1.0\n",
       "Total count: 5, label: 2, Accuracy: 1.0\n",
       "Total count: 5, label: 3, Accuracy: 1.0\n",
@@ -595,18 +578,41 @@
       "Total count: 5, label: 6, Accuracy: 1.0\n",
       "Total count: 5, label: 7, Accuracy: 1.0\n",
       "Total count: 6, label: 8, Accuracy: 1.0\n",
-      "Total count: 5, label: 9, Accuracy: 1.0\n",
+      "Total count: 4, label: 9, Accuracy: 1.0\n",
       "Total count: 5, label: 10, Accuracy: 1.0\n",
       "Total count: 4, label: 11, Accuracy: 1.0\n",
       "Total count: 4, label: 12, Accuracy: 1.0\n",
       "Total count: 5, label: 13, Accuracy: 1.0\n",
       "Total count: 5, label: 14, Accuracy: 1.0\n",
       "Total count: 5, label: 15, Accuracy: 1.0\n",
-      "Total count: 4, label: 16, Accuracy: 1.0\n",
+      "Total count: 4, label: 16, Accuracy: 0.75\n",
+      "Total count: 5, label: 17, Accuracy: 1.0\n",
+      "Total count: 4, label: 18, Accuracy: 1.0\n",
+      "Total count: 5, label: 19, Accuracy: 0.8\n",
+      "Total count: 6, label: 20, Accuracy: 0.8333333333333334\n",
+      "WRONG LABEL, expected: 16, got: 2\n",
+      "WRONG LABEL, expected: 20, got: 8\n",
+      "Total count: 5, label: 0, Accuracy: 1.0\n",
+      "Total count: 4, label: 1, Accuracy: 1.0\n",
+      "Total count: 5, label: 2, Accuracy: 1.0\n",
+      "Total count: 5, label: 3, Accuracy: 1.0\n",
+      "Total count: 5, label: 4, Accuracy: 1.0\n",
+      "Total count: 5, label: 5, Accuracy: 1.0\n",
+      "Total count: 5, label: 6, Accuracy: 1.0\n",
+      "Total count: 5, label: 7, Accuracy: 1.0\n",
+      "Total count: 6, label: 8, Accuracy: 1.0\n",
+      "Total count: 4, label: 9, Accuracy: 1.0\n",
+      "Total count: 5, label: 10, Accuracy: 1.0\n",
+      "Total count: 4, label: 11, Accuracy: 1.0\n",
+      "Total count: 4, label: 12, Accuracy: 1.0\n",
+      "Total count: 5, label: 13, Accuracy: 1.0\n",
+      "Total count: 5, label: 14, Accuracy: 1.0\n",
+      "Total count: 5, label: 15, Accuracy: 1.0\n",
+      "Total count: 4, label: 16, Accuracy: 0.75\n",
       "Total count: 5, label: 17, Accuracy: 1.0\n",
       "Total count: 4, label: 18, Accuracy: 1.0\n",
       "Total count: 5, label: 19, Accuracy: 1.0\n",
-      "Total count: 6, label: 20, Accuracy: 1.0\n"
+      "Total count: 6, label: 20, Accuracy: 0.8333333333333334\n"
      ]
     }
    ],
@@ -663,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "da8be678",
    "metadata": {},
    "outputs": [],
