add citations for code snippet use

--- a/image_classification/image-classification.ipynb
+++ b/image_classification/image-classification.ipynb
@@ -81,12 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "133f4e31",
    "metadata": {},
    "outputs": [],
    "source": [
     "### INSPIRED BY VGG16 architecture\n",
+    "### WHY I USED BATCHNORM: https://towardsdatascience.com/exploring-the-superhero-role-of-2d-batch-normalization-in-deep-learning-architectures-b4eb869e8b60/\n",
     "def get_model(num_classes: int) -> nn.Module:\n",
     "    res = nn.Sequential(\n",
     "        nn.Conv2d(4, 8, kernel_size=3, padding=1),\n",
@@ -118,12 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "51c2d968",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "### TAKEN FROM GRID UNIVERSE LIBRARY\n",
     "def draw_direction_triangles_on_image(\n",
     "    image: Image.Image, size: int, dx: int, dy: int, count: int\n",
     ") -> Image.Image:\n",
@@ -265,11 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "894cf1c1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### PARTS TAKEN FROM CHATGPT, conversation link: https://chatgpt.com/share/69115bb7-ae24-8008-a13d-26cafe249446 . PLEASE SCROLL TO THE BOTTOM\n",
+    "\n",
     "def get_augmentations():\n",
     "    return transforms.Compose([\n",
     "        transforms.Resize(64),\n",
