--- a/image_classification/direction_classification.ipynb
+++ b/image_classification/direction_classification.ipynb
@@ -88,11 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "04425758",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### THIS IS FROM GRID UNIVERSE LIBRARY\n",
     "def draw_direction_triangles_on_image(\n",
     "    image: Image.Image, size: int, dx: int, dy: int, count: int\n",
     ") -> Image.Image:\n",
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "161ab97a",
    "metadata": {},
    "outputs": [],
@@ -163,6 +164,7 @@
     "labels = [\"no_direction\", \"right\", \"left\", \"down\", \"up\"]\n",
     "directions = [(0, 0), (1, 0), (-1, 0), (0, 1), (0, -1)]\n",
     "\n",
+    "# THIS IS FROM CHATGPT\n",
     "class RandomDirection:\n",
     "    def __init__(self):\n",
     "        pass\n",
@@ -226,11 +228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "75df9dba",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### PARTS TAKEN FROM CHATGPT, conversation link: https://chatgpt.com/share/69115bb7-ae24-8008-a13d-26cafe249446 . PLEASE SCROLL TO THE BOTTOM\n",
+    "\n",
     "from torchvision import transforms\n",
     "from torchvision.transforms import InterpolationMode\n",
     "def get_augmentations():\n",
@@ -238,9 +242,9 @@
     "        transforms.Resize(64, interpolation=InterpolationMode.BICUBIC),\n",
     "        transforms.CenterCrop((11, 11)),\n",
     "        transforms.ColorJitter(\n",
-    "            brightness=0.3,  # ±30% brightness\n",
-    "            contrast=0.3,    # ±30% contrast\n",
-    "            saturation=0.3,  # add variety for tinted whites\n",
+    "            brightness=0.3,\n",
+    "            contrast=0.3,\n",
+    "            saturation=0.3,\n",
     "            hue=0.05  \n",
     "        ),\n",
     "        transforms.RandomApply([transforms.GaussianBlur(3, sigma=(0.1, 1.5))], p=0.2),\n",
